[package]
name = "cuda-biology"
version = "0.1.0"
edition = "2021"
description = "Biological agent with instinct pipeline"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-biology"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

